<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/warrantiesFragment"
        android:icon="@drawable/ic_menu_warranties"
        android:orderInCategory="1"
        android:title="@string/main_menu_title_warranties" />

    <item
        android:enabled="false"
        android:orderInCategory="2"
        android:title="" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="3"
        android:title="@string/main_menu_title_settings" />

</menu>