...
    <string name="login_btn_register_title">Don’t have an account?</string>
    <string name="login_btn_register">Register</string>
    <string name="login_error_blank_email">Enter your email address!</string>
    <string name="login_error_invalid_email">The entered email address is not valid!</string>
    <string name="login_error_blank_password">Enter your password!</string>
    <string name="login_error_account_not_exist">The account with the provided email does not exist.</string>
    <string name="login_error_invalid_credentials">The provided credentials are incorrect.</string>
    <string name="login_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>


    <string name="register_description">Enter your information below.</string>
    <string name="register_textfield_email_title">Email Address</string>
    <string name="register_textfield_email_hint">Enter your email address</string>
...
    <string name="change_email_error_blank_password">Enter your password!</string>
    <string name="change_email_error_blank_new_email">Enter a new email address!</string>
    <string name="change_email_error_invalid_new_email">The entered new email address is not valid!</string>
    <string name="change_email_invalid_credentials">The provided credentials are incorrect.</string>
    <string name="change_email_error_same_email_as_current">The new email address cannot be the same as your current email!</string>
    <string name="change_email_error_account_with_same_email_exists">An account with the provided email already exists.</string>
    <string name="change_email_success_dialog_message">A verification link has been sent to your new email address. Please click the link to update your email.</string>
    <string name="change_email_success_dialog_btn_confirm">Confirm</string>


    <string name="change_password_app_bar_title">Change Password</string>
    <string name="change_password_textfield_current_password_title">Current Password</string>
    <string name="change_password_textfield_current_password_hint">Enter your current password</string>
...
