...
        android:id="@+id/loginFragment"
        android:name="com.xeniac.warrantyroster_manager.authentication.presentation.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/from_down"
            app:exitAnim="@anim/to_up"
            app:popEnterAnim="@anim/from_up"
            app:popExitAnim="@anim/to_down" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPwFragment"
            app:enterAnim="@anim/from_down"
            app:exitAnim="@anim/to_up"
            app:popEnterAnim="@anim/from_up"
            app:popExitAnim="@anim/to_down" />
    </fragment>

...
